# IgrejaSaoSebastiao

./: .env.example  .gitignore  ACESSO.txt  AUDITORIA-MOBILE-2026-05-27.md  CLAUDE.md  GUIA_ADMIN.html  GUIA_RAPIDO.md  README.md  Script.js  Termo_Entrega_Site_IgrejaSaoSebastiao.docx  app.py  config.py  database.db  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  vercel.json
igreja_sao_sebastiao/: .env.example  .gitignore  Dockerfile  Procfile  conftest.py  docker-compose.yml  pyproject.toml  render.yaml
igreja_sao_sebastiao/.github/workflows/: ci.yml  deploy.yml
igreja_sao_sebastiao/apps/accounts/: admin.py  models.py
igreja_sao_sebastiao/apps/contact/: admin.py  apps.py  models.py  validators.py  views.py
igreja_sao_sebastiao/apps/dashboard/: admin.py
igreja_sao_sebastiao/apps/gallery/: admin.py  apps.py  models.py  services.py
igreja_sao_sebastiao/apps/parish/: admin.py  apps.py  models.py  views.py
igreja_sao_sebastiao/config/: urls.py  wsgi.py
igreja_sao_sebastiao/config/settings/: base.py  dev.py  prod.py  staging.py  test.py
igreja_sao_sebastiao/static/css/: admin_custom.css  main.css
igreja_sao_sebastiao/static/js/: main.js
igreja_sao_sebastiao/templates/: base.html  index.html
igreja_sao_sebastiao/templates/admin/: dashboard.html  image_bank.html  site_content_editor.html  site_images.html
igreja_sao_sebastiao/templates/errors/: 404.html  500.html
igreja_sao_sebastiao/templates/partials/: _about.html  _contact.html  _events.html  _footer.html  _gallery.html  _header.html  _hero.html  _history.html  _location.html  (+1 more)
(+104 files in other folders)
